deployments/kubernetes/base/merchant_detail/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: merchant-detail-netpol
  namespace: ecommerce
spec:
  podSelector:
    matchLabels:
      app: merchant-detail
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ecommerce

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ecommerce
